--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "eslint": "^8.56.0"
   },
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
